- add master read wait option.
- add serialization to sasl init.
- dont allocate dev_ctl_ops too early.
- fix race accessing qdn in get_query_dn().
- fix incorrect round robin host detection.
- fix memory leak in create_client().
- fix memory leak in get_exports().
- fix typo in flagdir configure option.
- clarify multiple mounts description.
- gaurd against incorrect umount return.

28/03/2014 autofs-5.0.9
=======================
- fix undefined authtype_requires_creds err if ldap enabled but without sasl.
- fix master map type check.
- fix task manager not getting signaled.
- allow --with-systemd to take a path arg.
- fix WITH_LIBTIRPC function name.
- fix ipv6 libtirpc getport.
- fix ipv6 link local address handling.
- fix fix ipv6 libtirpc getport.
- get_nfs_info() should query portmapper if port is not given.
- fix rpc_portmap_getport() proto not set.
- fix protmap not trying proto v2.
- fix rpc_getport() when libtirpc is disabled.
- fix rpc_getrpcbport() when libtirpc is disabled.
- don't reset errno.
- extend fix for crash due to thread unsafe use of libldap.
- fix deadlock in init_ldap_connection.
- fix options compare.
- fix negative status being reset on map read.
- check for existing offset mount before mounting.
- fix max() declaration.
- fix symlink fail message in mount_bind.c.
- fix cache readlock not taken on lookup.
- pass map_source as function paramter where possible.
- check for bind onto self in mount_bind.c.
- fix symlink expire.
- dont clobber mapent for negative cache.
- fix macro_addvar() and move init to main thread.
- change walk_tree() to take ap.
- add negative cache lookup to hesiod lookup.
- fix external env configure.
- make autofs(5) consistent with auto.master(5).
- fix map source with type lookup.
- fix lookup_nss_mount() map lookup.
- dont ignore null cache entries on multi mount umount.
- fix inconsistent error returns in handle_packet_missing_direct().
- simple coverity fixes.
- fix fix options compare.